<resources>
    <string name="app_name">ExamApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_weather_data">No weather data found</string>
    <string name="no_degrees_found">No degrees found</string>
    <string name="degrees_celsius">\u2103</string>
    <string name="city">City</string>
    <string name="no_day_found">No day found</string>
    <string name="no_description_of_the_day">No description of the day</string>
    <string name="no_min_max_degree_found">No min / max degree found</string>
    <string name="no_moisture_found">No moisture found</string>
    <string name="no_wind_information">No wind information</string>
    <string name="no_information_of_rain">No information of rain</string>
    <string name="weather_image_from_online">Weather image from online</string>
</resources>
